--- a/KanjiRyokucha/CredentialsViewController.xib
+++ b/KanjiRyokucha/CredentialsViewController.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CredentialsViewController" customModule="KanjiRyokucha" customModuleProvider="target">
             <connections>
+                <outlet property="guestButton" destination="TQs-b2-eXE" id="3Cf-5R-DtF"/>
                 <outlet property="loginButton" destination="1aI-wY-QJu" id="v0d-aY-xaa"/>
                 <outlet property="loginContainer" destination="h6g-Ix-9mH" id="c0T-fq-iTJ"/>
                 <outlet property="passwordField" destination="GCW-cT-lfx" id="H2k-Va-nTQ"/>
@@ -122,25 +123,39 @@
                         <constraint firstAttribute="bottom" secondItem="wa0-BA-FF7" secondAttribute="bottom" id="bN5-KZ-7NI"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNb-6v-x7W">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNb-6v-x7W" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                     <rect key="frame" x="62" y="312" width="250" height="34"/>
-                    <state key="normal" title="or Sign Up now at Kanji Koohii">
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <state key="normal" title="Sign Up now at Kanji Koohii">
                         <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="signupPressed:" destination="-1" eventType="touchUpInside" id="Rvp-gO-HuC"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQs-b2-eXE" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
+                    <rect key="frame" x="62" y="366" width="250" height="34"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <state key="normal" title="Enter as Guest">
+                        <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="guestPressed" destination="-1" eventType="touchUpInside" id="ryn-Fm-pcf"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.87450980389999999" green="1" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="TQs-b2-eXE" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="4YE-6Z-5DX"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="width" secondItem="1aI-wY-QJu" secondAttribute="width" id="DKN-2h-bya"/>
+                <constraint firstItem="TQs-b2-eXE" firstAttribute="width" secondItem="pNb-6v-x7W" secondAttribute="width" id="Fcx-KP-GIH"/>
                 <constraint firstItem="h6g-Ix-9mH" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="HYp-X8-FXk"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="top" secondItem="h6g-Ix-9mH" secondAttribute="bottom" constant="31" id="Lbd-9J-A5X"/>
                 <constraint firstItem="XWx-SD-x5n" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PGi-Wz-9F3"/>
                 <constraint firstItem="gEb-v8-ePA" firstAttribute="top" secondItem="XWx-SD-x5n" secondAttribute="bottom" id="Pml-Yu-F2V"/>
                 <constraint firstItem="Sxz-Z0-daI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="S7u-KN-6Xx"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="boQ-o8-4fh"/>
+                <constraint firstItem="TQs-b2-eXE" firstAttribute="top" secondItem="pNb-6v-x7W" secondAttribute="bottom" constant="20" id="hhi-oN-gwE"/>
                 <constraint firstItem="Sxz-Z0-daI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="iSs-MZ-K9x"/>
                 <constraint firstItem="gEb-v8-ePA" firstAttribute="trailing" secondItem="XWx-SD-x5n" secondAttribute="trailing" id="nZN-Wt-IER"/>
                 <constraint firstAttribute="bottom" secondItem="XWx-SD-x5n" secondAttribute="bottom" constant="25" id="uAF-5K-K6Q"/>
