--- a/KanjiRyokucha/CredentialsViewController.xib
+++ b/KanjiRyokucha/CredentialsViewController.xib
@@ -124,9 +124,10 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNb-6v-x7W" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                    <rect key="frame" x="62" y="312" width="250" height="34"/>
+                    <rect key="frame" x="62" y="312" width="250" height="32"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <state key="normal" title="Sign Up now at Kanji Koohii">
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <state key="normal" title="Sign Up for free at Kanji Koohii">
                         <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
@@ -134,7 +135,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQs-b2-eXE" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                    <rect key="frame" x="62" y="366" width="250" height="34"/>
+                    <rect key="frame" x="62" y="364" width="250" height="34"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <state key="normal" title="Enter as Guest">
                         <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
