--- a/KanjiRyokucha/Base.lproj/LaunchScreen.storyboard
+++ b/KanjiRyokucha/Base.lproj/LaunchScreen.storyboard
@@ -33,7 +33,7 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kanji100" translatesAutoresizingMaskIntoConstraints="NO" id="vNu-Jh-rLi">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kanji100.png" translatesAutoresizingMaskIntoConstraints="NO" id="vNu-Jh-rLi">
                                 <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="RXb-zs-fZ8"/>
@@ -66,6 +66,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="kanji100" width="16" height="16"/>
+        <image name="kanji100.png" width="500" height="500"/>
     </resources>
 </document>
